[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Shield.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 45.0

[node name="Shield" type="Area2D"]
z_index = 100
gravity = 0.0
collision_layer = 32
collision_mask = 4
script = ExtResource( 1 )

[node name="ShieldHitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision_margin = 10.0

[node name="PerfectParryTimer" type="Timer" parent="."]
one_shot = true

[node name="ShieldCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Shield_area_entered"]
